<resources>
    <string-array name="ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="arrSequenceActivityHeadingText">
        <item>brushing</item>
        <item>toilet</item>
        <item>bathing</item>
        <item>""</item>
        <item>""</item>
        <item>""</item>
        <item>""</item>
        <item>\tmorning routine</item>
        <item>\tbed time routine</item>
    </string-array>
    <string name="app_name">Jellow</string>
    <string name="action_settings">Settings</string>
    <string name="Language">Language</string>
    <string name="saveLanguage">Apply Change</string>
    <string-array name="bloodgroup">
        <item>not selected</item>
        <item>A+ve</item>
        <item>A-ve</item>
        <item>B+ve</item>
        <item>B-ve</item>
        <item>AB+ve</item>
        <item>AB-ve</item>
        <item>O+ve</item>
        <item>O-ve</item>
    </string-array>
    <string-array name="bloodgroup_talkback">
        <item>not selected</item>
        <item>A positive</item>
        <item>A negative</item>
        <item>B positive</item>
        <item>B negative</item>
        <item>A B positive</item>
        <item>A B negative</item>
        <item>O positive</item>
        <item>O negative</item>
    </string-array>
    <string-array name="picture_view_mode">
        <item>Picture and Text</item>
        <item>Picture only</item>
    </string-array>
    <string-array name="grid_size">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>9</item>
    </string-array>
    <string-array name="acc_grid_size">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Nine</item>
    </string-array>
    <string name="change_language_line2">Select any language from the dropdown below:</string>
    <string name="simple_ime">Jellow Keyboard</string>
    <string name="subtype_en_US">Serial ABC</string>
    <string name="perform_db_update" translatable="false">com.dsource.idc.jellow.perform_db_update</string>
    <string name="action_bar_title">Home</string>
    <string name="txtSpeechSpeed">Speech Speed</string>
    <string name="txtVoiceSpeech">Voice Pitch</string>
    <string name="txtDisplayMode">Display Mode</string>
    <string name="txtVoiceVolume">Speech Volume</string>
    <string name="txtNumOfPerPerScr">Number of category icons per screen</string>
    <string name="txtDemo">SPEECH DEMO</string>
    <string name="txtSave">Save</string>
    <string name="demoTtsSpeech">Hello! you are using Jellow Communicator.</string>
    <string name="savedSettingsMessage">Settings saved.</string>
    <string name="languageChanged">Language Changed</string>
    <string name="checkConnectivity">You are not connected to the Internet. Please turn on your Internet.</string>
    <string name="menuProfile">Profile</string>
    <string name="menuMyBoards">My Boards</string>
    <string name="menuAbout">About Jellow</string>
    <string name="menuTutorials">Tutorial</string>
    <string name="menuKeyboardInput">Keyboard Control</string>
    <string name="menuResetPref">Reset Preferences</string>
    <string name="menuFeedback">Feedback</string>
    <string name="menuUserRegistration">Registration Page</string>
    <string name="menuAccessibility">Accessibility</string>
    <string name="menuClosePopup">Close menu</string>
    <string name="language_download_screen" translatable="false">Jellow content download screen</string>
    <string name="labelSplash">Jellow is loading. Please wait!</string>
    <string name="aPos" translatable="false">A, Positive</string>
    <string name="aNeg" translatable="false">A, Negative</string>
    <string name="bPos" translatable="false">B, Positive</string>
    <string name="bNeg" translatable="false">B, Negative</string>
    <string name="abPos" translatable="false">A B, Positive</string>
    <string name="abNeg" translatable="false">A B, Negative</string>
    <string name="oPos" translatable="false">O, Positive</string>
    <string name="oNeg" translatable="false">O, Negative</string>
    <string name="easyToUse">Easy to Use</string>
    <string name="clearPictures">Clear Pictures</string>
    <string name="clearVoice">Clear Voice</string>
    <string name="easyToNavigate">Easy to Navigate</string>
    <string name="commentSuggestions">Comments and Suggestions</string>
    <string name="submit">SUBMIT</string>
    <string name="serial_keyboard_title">Serial Keyboard:</string>
    <string name="serial_keyboard_info">Jellow communicator is equipped with its own \'Serial Jellow keyboard\'. This keyboard was designed based on feedback from special educators and teachers and features alphabets placed in a serial manner starting form the alphabet \'A\'. The serial keyboard makes it easy for the user to anticipate the place of a particular alphabet on the keyboard and is especially very useful for children learning early literacy skills. Similarly, the keyboard also features numeral keys from 0–9 and symbols, which are most relevant to every day communication.</string>
    <string name="keyboardControlTxt">To enable a keyboard of your choice and make it as default, you need to complete 2 steps:</string>
    <string name="step1">Step 1: Enable Keyboard from device settings</string>
    <string name="qwertyKeyboard">QWERTY</string>
    <string name="serialKeyboard">SERIAL ABC</string>
    <string name="step2">Step 2: Save Keyboard as default option</string>
    <string name="saveAsDefault">SAVE AS DEFAULT</string>
    <string name="getKeyboardControl">Keyboard Control</string>
    <string name="childName">Child\'s Name **</string>
    <string name="websiteLink" translatable="false">http://www.jellow.org</string>
    <string name="caregiverName">Caregiver\'s Name **</string>
    <string name="careGiverContact">Caregiver\'s Contact number other than this device\'s sim number **</string>
    <string name="homeAddress">Home Address **</string>
    <string name="emailAddress">Email Address **</string>
    <string name="bloodGroup">Blood Group **</string>
    <string name="detailSaved">Details saved</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_emailId">Invalid email address</string>
    <string name="enterTheName">Please enter your Child\'s name</string>
    <string name="search_act_title">Search Icons in Jellow</string>
    <string name="iconsHasBeenReset">Preferences have been reset.</string>
    <string name="speak">Speak</string>
    <string name="stop">Stop</string>
    <string name="about_jellow_speech">Jellow is a communicator, using icons to enable speech and can be used by those learning to speak, or those who have difficulty with speech. Jellow can also be used by toddlers and early learners to learn words and categories frequently used in their daily lives. Jellow\'s colourful and friendly icons can help children develop an association between pictures and their corresponding word labels. It is developed at IDC School of Design at the Indian Institute of Technology Bombay located in Mumbai. A novel Emotional Language Proto call or ELP was conceived and developed by the project investigators, in order to enhance the language ability of Jellow. ELP represents the 6 expressive icons that form the core of the interface. Using these core icons, the child can communicate their likes, dislikes, and needs with others. Jellow is conceived as children-friendly with an easy-to-learn interface. The application is optimized for Android tablets.Jellow is currently available in English, Hindi, Bengali, Marathi, Tamil, Spanish, German and French. The current version of Jellow is _. The application is under further development. Therefore, if you have any suggestions for us, please submit it under the feedback tab or write to us at jellowcommunicator@gmail.com. Jellow is licensed under a Creative Commons Attribution Non-commercial Share Alike 4.0 International License. Work on Jellow is attributed to the Indian Institute of Technology Bombay. The content in this application comprising icons, layout, architecture, visual identity, translation, and the software codes can be shared and adopted but cannot be used for commercial purposes. When the content is used, we request you to acknowledge Indian Institute of Technology Bombay. Jellow is available for download at www dot jellow dot o r g. If interested in further developing the code or to conduct a Jellow workshop at your place, please write to Professor Ravi Poovaiah at j e l l o w c o m m u n i c a t o r @ g m a i l . c o m</string>
    <string name="catBtnDesc">Jellow has 9 central category buttons and 6 expressive side buttons:</string>
    <string name="catBtn">Category buttons:</string>
    <string name="expBtn">Expressive buttons:</string>
    <string name="jellowUsageDesc">To speak using Jellow, the user first clicks on any category button and then on an expressive button in that order. For instance, Jellow will say, “I want to eat” using the selection below:</string>
    <string name="jellowUsageSubCat">By double-clicking on a category button, the user can access further sub-categories:</string>
    <string name="levelOneCat">Level 1 categories:</string>
    <string name="levelTwoCat">Level 2 categories:</string>
    <string name="levelThreeCat">Level 3 icons:</string>
    <string name="settingDesc">The user can customize their profile and adjust the basic voice settings of the application by clicking on the top right corner of the screen:</string>
    <string name="seqActDesc">Jellow can also be used to teach children sequential steps of daily activities. By clicking on any individual step, the user may view the expressive buttons:</string>
    <string name="toiletSeq">Toilet sequence:</string>
    <string name="expBtnSeq">Expressive buttons in the sequence:</string>
    <string name="ttsDesc">To use Jellow in English, Hindi, Bengali, Tamil, Spanish, German, French, please activate <b>\'Google text-to-speech (TTS)\'</b> within <b>\'Language\'</b> settings of your device. Within Google TTS settings, first change the <b>default language</b> to preferred language and then download voice for preferred language through the <b>\'Install voice data\'</b> option</string>
    <string name="bullet" translatable="false">●</string>
    <string name="txt_intro2_appUsageDesc">The user first clicks on a category button and then on an expressive button</string>
    <string name="txt_intro2_speakUsingJellow">Speaking using Jellow</string>
    <string name="next_slide">Next slide</string>
    <string name="previous_slide">Previous slide</string>
    <string name="search_title">Search icon</string>
    <string name="intro2_cd">This image has the home screen of Jellow with only 2 icons of “Eating” and “Yes” highlighted. The rest of the buttons are faded out. The image shows that to speak using Jellow, user has to first click on any category button, for instance, “Eating” and then on an expressive button, for example, “Yes”. In this way the user can speak using Jellow.</string>
    <string name="number_of_icons_per_screen">Number of icons per screen</string>
    <string name="board_name">Add board name here</string>
    <string name="add_board">Add Board</string>
    <string name="cancel">Cancel</string>
    <string name="txtContinue">Continue</string>
    <string name="select_image_for_board">Select image for the board</string>
    <string name="select_source_for_image_for_board">Select source for board image</string>
    <string name="select_language_for_board">Select language for the board</string>
    <string name="enable_reposition_icons">Enable repositioning of icons</string>
</resources>