<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/menuGroupInfo">
        <item
            android:id="@+id/search"
            android:title="@string/search_title"
            android:icon="@drawable/ic_search_large"
            android:checked="true"
            app:showAsAction="ifRoom"
            android:orderInCategory="1"/>
        <item
            android:id="@+id/profile"
            android:title="@string/menuProfile"
            app:showAsAction="never"/>
        <item
            android:id="@+id/aboutJellow"
            android:title="@string/menuAbout"
            app:showAsAction="never"/>
        <item
            android:id="@+id/tutorial"
            android:title="@string/menuTutorials"
            app:showAsAction="never"/>
    </group>
    <group android:id="@+id/menuGroupSettings">
        <item
            android:id="@+id/keyboardInput"
            android:title="@string/menuKeyboardInput"
            app:showAsAction="never"/>
        <item
            android:id="@+id/languageSelect"
            android:title="@string/Language"
            app:showAsAction="never"/>
        <item
            android:id="@+id/languagePackUpdate"
            android:title="@string/Update"
            app:showAsAction="never"/>
        <item
            android:id="@+id/settings"
            android:title="@string/action_settings"
            app:showAsAction="never"/>
        <item
            android:id="@+id/accessibilitySetting"
            android:title="@string/menuAccessibility"
            app:showAsAction="never"/>
        <item
            android:id="@+id/resetPreferences"
            android:title="@string/menuResetPref"
            app:showAsAction="never"/>
    </group>
    <group android:id="@+id/menuFeedback">
        <item
            android:id="@+id/feedback"
            android:title="@string/menuFeedback"
            app:showAsAction="never"/>
    </group>
    <group android:id="@+id/menuClose">
        <item
            android:id="@+id/closePopup"
            android:title="@string/menuClosePopup"
            app:showAsAction="never"/>
    </group>
</menu>