<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile"
        android:title="@string/menuProfile"
        android:numericShortcut="1"
        android:alphabeticShortcut="a"/>
    <item
        android:id="@+id/info"
        android:title="@string/menuAbout"
        android:numericShortcut="2"
        android:alphabeticShortcut="b"/>
    <item
        android:id="@+id/usage"
        android:title="@string/menuTutorials"
        android:numericShortcut="3"
        android:alphabeticShortcut="c"/>
    <item
        android:id="@+id/settings"
        android:title="@string/action_settings"
        android:numericShortcut="4"
        android:alphabeticShortcut="d"/>
    <item
        android:id="@+id/keyboardinput"
        android:title="@string/menuKeyboardInput"
        android:numericShortcut="7"
        android:alphabeticShortcut="g"/>
    <item
        android:id="@+id/reset"
        android:title="@string/menuResetPref"
        android:numericShortcut="5"
        android:alphabeticShortcut="e"/>
    <item
        android:id="@+id/feedback"
        android:title="@string/menuFeedback"
        android:numericShortcut="6"
        android:alphabeticShortcut="f"/>
</menu>