<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:layout_weight="10"
    android:id="@+id/main"
    android:importantForAccessibility="yes">
    <ImageView
        android:id="@+id/btnMoveLeft"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:onClick="changeDemoScreen"
        android:layout_gravity="start"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:src="@drawable/ic_chevron_left"
        android:clickable="false"
        android:contentDescription="@string/previous_slide"
        tools:ignore="RtlSymmetry" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_intro2_title"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/defaultTextViewStyle"
            android:paddingLeft="32dp"
            android:layout_weight="1"
            android:paddingRight="32dp"
            android:textSize="13sp"
            android:text="@string/txt_intro2_appUsageDesc"/>
       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="21">
            <ImageView
                android:id="@+id/intro2_img"
                android:layout_width="wrap_content"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:src="@drawable/speakingwithjellowimage2"
            android:contentDescription="@string/intro2_cd"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_intro2_caption"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="20dp"
                android:layout_gravity="top"
                android:gravity="center"
                style="@style/defaultTextViewStyle"
                android:paddingLeft="64dp"
                android:paddingRight="64dp"
                android:textSize="13sp"
                android:text="@string/txt_intro2_speakUsingJellow"
                android:importantForAccessibility="no"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="54dp" />
    </LinearLayout>
    <ImageView
        android:id="@+id/btnMoveRight"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:onClick="changeDemoScreen"
        android:layout_gravity="end"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:src="@drawable/ic_chevron_right"
        android:contentDescription="@string/next_slide"
        tools:ignore="RtlSymmetry" />
</FrameLayout>
