<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent">
    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="@dimen/add_board_dialog_width"
        android:id="@+id/touch_inside"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/MyDialogBox"
        android:clickable="true"
        android:background="@drawable/white_rounded_back"
        android:focusableInTouchMode="true"
        android:focusable="true">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_dialog"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"
            android:textColor="@color/app_background"
            android:background="@drawable/accent_background_top_rounded"
            android:text="@string/add_board"/>
        <LinearLayout
            android:layout_below="@+id/title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_board_dialog_side_margin"
                android:layout_marginLeft="@dimen/edit_board_dialog_side_margin"
                android:layout_marginRight="@dimen/edit_board_dialog_side_margin">
                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_width="@dimen/board_edit_icon_size"
                    android:layout_height="@dimen/board_edit_icon_size"
                    android:padding="6dp"
                    android:src="@drawable/ic_board_person"
                    android:id="@+id/board_icon"
                    android:background="@drawable/board_list_back"
                    android:importantForAccessibility="no"/>
                <ImageView
                    android:layout_width="@dimen/my_board_dialog_camera_icon_size"
                    android:layout_height="@dimen/my_board_dialog_camera_icon_size"
                    android:layout_marginLeft="@dimen/camera_mar_left"
                    android:layout_marginTop="@dimen/camera_mar_right"
                    android:id="@+id/edit_image"
                    android:src="@drawable/camera_symbol"
                    android:layout_marginStart="@dimen/camera_mar_left"
                    android:contentDescription="@string/select_image_for_board"/>
                <ListView
                    android:visibility="invisible"
                    android:id="@+id/camera_list"
                    android:layout_width="@dimen/camera_drop_down_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_image"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="-12dp"
                    android:divider="@drawable/divider"
                    android:dividerHeight=".5px"
                    android:contentDescription="@string/select_source_for_image_for_board"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_margin="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="vertical">
                <EditText
                    android:layout_width="@dimen/board_add_edit_icon_size"
                    android:id="@+id/board_name"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:maxLength="45"
                    android:maxLines="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/board_name"
                    android:textColor="@color/black_80"
                    android:textSize="@dimen/board_dialog_edit_text"
                    android:imeOptions="actionDone"
                    android:textColorHint="@color/light_grey"
                    android:background="@drawable/edit_board_dialog_edit_text"/>
                <Spinner
                    android:id="@+id/langSelectSpinner"
                    style="@style/mmb_spinner_text_size"
                    android:layout_width="@dimen/board_add_edit_icon_size"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edit_board_dialog_side_margin"
                    android:background="@drawable/custom_spinner_view"
                    android:paddingVertical="@dimen/spinner_vertical_padding"
                    android:paddingHorizontal="@dimen/spinner_horizontal_padding"
                    android:contentDescription="@string/select_language_for_board"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edit_board_dialog_side_margin"
                    android:id="@+id/tv_language"
                    android:text="@string/Language"
                    android:visibility="gone"
                    android:textColor="@color/black_80"
                    android:focusable="true" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/edit_board_dialog_side_margin"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/profile_save_btn_height"
                android:paddingHorizontal="@dimen/mmb_btn_pad"
                android:background="@drawable/button_background"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="@dimen/profile_save_btn_txt_size"
                android:textStyle="normal"
                android:layout_marginBottom="@dimen/edit_board_dialog_side_margin"/>
            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/profile_save_btn_height"
                android:paddingHorizontal="@dimen/mmb_btn_pad"
                android:background="@drawable/button_background"
                android:text="@string/txtContinue"
                android:textAllCaps="false"
                android:textSize="@dimen/profile_save_btn_txt_size"
                android:textStyle="normal" />
        </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
